increased-metadata-analysis

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,10 @@ uvicorn
 sqlalchemy
 psycopg2-binary
 python-multipart
-alembic 
+alembic
+python-magic
+pillow
+moviepy==1.0.3
+mutagen==1.47.0
+numpy
+decorator>=4.0.2 
