added basic opencv functionality

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,10 @@ RUN apt-get update && apt-get install -y \
     libsm6 \
     libxext6 \
     libgl1-mesa-glx \
+    libglib2.0-0 \
+    libsm6 \
+    libxrender1 \
+    libxext6 \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory in the container
