--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,28 @@ venv/
 # Cursor specific
 .cursor/
 .cursor-log/
+
+# OpenCV model files
+backend/app/models/
+backend/app/models/*.caffemodel
+backend/app/models/*.prototxt
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+
+# Uploads
+uploads/*
+!uploads/.gitkeep
+uploads/images/*
+!uploads/images/.gitkeep
+uploads/videos/*
+!uploads/videos/.gitkeep
+uploads/documents/*
+!uploads/documents/.gitkeep
+uploads/audio/*
+!uploads/audio/.gitkeep
+uploads/other/*
+!uploads/other/.gitkeep
