--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       dockerfile: Dockerfile
     container_name: fastapi_app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    environment:
+      - DATABASE_URL=postgresql://myuser:mypassword@db:5432/mydatabase
     volumes:
       - ./backend:/code
       - ./uploads:/code/uploads
